[gd_scene load_steps=10 format=3 uid="uid://dhu2c5injhmf6"]

[ext_resource type="Script" path="res://levelSelect.gd" id="1_wkiym"]
[ext_resource type="Texture2D" uid="uid://dl3c4rg88nnlx" path="res://Screenshot 2023-05-06 181429.png" id="2_dlui0"]
[ext_resource type="Texture2D" uid="uid://b0xvj6e7ltdo7" path="res://Screenshot 2023-05-06 185850.png" id="3_rbbix"]
[ext_resource type="Texture2D" uid="uid://boeokx5fqebhn" path="res://Screenshot 2023-05-06 190156.png" id="4_n1tt8"]

[sub_resource type="Theme" id="Theme_idpil"]
default_font_size = 75

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_434y2"]
bg_color = Color(0, 0, 0, 0.396078)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oln1f"]
bg_color = Color(0, 0, 0, 0.490196)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7a4e"]
bg_color = Color(0, 0, 0, 0.686275)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_7a3qv"]
font_size = 125

[node name="Node2D2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wkiym")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.847059, 0.360784, 0, 0.709804)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 58
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 73
theme_override_constants/margin_bottom = 28

[node name="Back" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_previous = NodePath("../../Level1")
focus_mode = 0
theme = SubResource("Theme_idpil")
theme_override_font_sizes/font_size = 85
theme_override_styles/normal = SubResource("StyleBoxFlat_434y2")
theme_override_styles/hover = SubResource("StyleBoxFlat_oln1f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t7a4e")
text = "   Back   "

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 58.0
offset_top = 75.0
offset_right = 1847.0
offset_bottom = 249.0
size_flags_vertical = 2
text = "Level Select"
label_settings = SubResource("LabelSettings_7a3qv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level1" type="Button" parent="."]
layout_mode = 2
offset_left = 43.0
offset_top = 336.0
offset_right = 407.0
offset_bottom = 439.0
size_flags_horizontal = 0
size_flags_vertical = 4
focus_next = NodePath("../MarginContainer/Back")
focus_mode = 0
theme = SubResource("Theme_idpil")
theme_override_styles/normal = SubResource("StyleBoxFlat_434y2")
theme_override_styles/hover = SubResource("StyleBoxFlat_oln1f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t7a4e")
text = "   Level 1   "

[node name="Level2" type="Button" parent="."]
layout_mode = 2
offset_left = 780.0
offset_top = 336.0
offset_right = 1144.0
offset_bottom = 439.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_next = NodePath("../MarginContainer/Back")
focus_mode = 0
theme = SubResource("Theme_idpil")
theme_override_styles/normal = SubResource("StyleBoxFlat_434y2")
theme_override_styles/hover = SubResource("StyleBoxFlat_oln1f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t7a4e")
text = "   Level 2   "

[node name="Level3" type="Button" parent="."]
layout_mode = 2
offset_left = 1518.0
offset_top = 336.0
offset_right = 1882.0
offset_bottom = 439.0
size_flags_horizontal = 8
size_flags_vertical = 4
focus_next = NodePath("../MarginContainer/Back")
focus_mode = 0
theme = SubResource("Theme_idpil")
theme_override_styles/normal = SubResource("StyleBoxFlat_434y2")
theme_override_styles/hover = SubResource("StyleBoxFlat_oln1f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t7a4e")
text = "   Level 3   "

[node name="Screenshot2023-05-06181429" type="Sprite2D" parent="."]
position = Vector2(224, 616)
scale = Vector2(0.593443, 0.686144)
texture = ExtResource("2_dlui0")

[node name="Screenshot2023-05-06185850" type="Sprite2D" parent="."]
position = Vector2(962.844, 619.313)
scale = Vector2(0.591048, 0.70468)
texture = ExtResource("3_rbbix")

[node name="Screenshot2023-05-06190156" type="Sprite2D" parent="."]
position = Vector2(1700, 620)
scale = Vector2(0.823798, 0.989967)
texture = ExtResource("4_n1tt8")

[connection signal="pressed" from="MarginContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
